Clean up of unnecessary files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,9 +17,6 @@ if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Release" CACHE STRING "CMake build type" FORCE)
 endif()
 
-include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-conan_basic_setup()
-
 find_package(IEDevScripts REQUIRED
              PATHS "${OpenVINO_SOURCE_DIR}/cmake/developer_package"
              NO_CMAKE_FIND_ROOT_PATH
@@ -100,17 +97,17 @@ include(cmake/test_model_zoo.cmake)
 
 add_subdirectory(thirdparty)
 add_subdirectory(src)
-# add_subdirectory(samples)
+add_subdirectory(samples)
 
 # Enable interpreter backend
 if (ENABLE_TESTS OR ENABLE_TEMPLATE)
     add_subdirectory(docs/template_plugin/backend)
 endif()
 include(cmake/extra_modules.cmake)
-# add_subdirectory(docs)
+add_subdirectory(docs)
 add_subdirectory(tools)
 add_subdirectory(scripts)
-# add_subdirectory(licensing)
+add_subdirectory(licensing)
 
 #
 # CPack
