Nlohmann_json and json-schema-validator as a libraries from Conan

--- a/src/common/offline_transformations/CMakeLists.txt
+++ b/src/common/offline_transformations/CMakeLists.txt
@@ -19,6 +19,11 @@ source_group("include" FILES ${PUBLIC_HEADERS})
 
 add_library(${TARGET_NAME} STATIC ${LIBRARY_SRC} ${PUBLIC_HEADERS})
 
+if (CONAN_EXPORTED)
+        find_package(nlohmann_json)
+        find_package(nlohmann_json_schema_validator)
+endif()
+
 target_link_libraries(${TARGET_NAME} PUBLIC openvino::runtime::dev
                                      PRIVATE openvino::itt pugixml::static openvino::runtime ngraph::reference
                                              nlohmann_json_schema_validator)
